按照版权要求更新。

--- a/general/about/index.html
+++ b/general/about/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="关于,性教育,知性,KnowSex,知性KnowSex">
-	<meta name="description" content="关于知性 KnowSex.net。">
+	<meta name="keywords" content="关于,性教育,KnowSex,">
+	<meta name="description" content="关于 KnowSex.net。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
-	<meta property="og:title" content="关于知性 KnowSex" />
-	<meta property="og:description" content="关于知性 KnowSex.net。" />
+	<meta property="og:title" content="关于" />
+	<meta property="og:description" content="关于 KnowSex.net。" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>关于知性 KnowSex - 知性 KnowSex</title>
+	<title>关于 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -120,7 +120,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<span class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</span>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -152,10 +152,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -173,8 +173,8 @@
 					<div class="header-img about-bg"></div>
 					<div class="header-cover">
 						<div class="header-title">
-							<h1 itemprop="headline">关于知性 KnowSex</h1>
-							<p>About KnowSex.net</p>
+							<h1 itemprop="headline">关于</h1>
+							<p>About</p>
 						</div>
 					</div>
 				</div>
@@ -182,14 +182,14 @@
 				<div class="main">
 					    <div class="center-block quote">
         <p>
-            知性 KnowSex 致力于提供直观、明了的生理知识，解答群众困惑，并希望藉此减少一些社会问题的发生。
+            KnowSex 致力于提供直观、明了的生理知识，解答群众困惑，并希望藉此减少一些社会问题的发生。
         </p>
-        <span class="source">知性 KnowSex 站长&emsp;Linn</span>
+        <span class="source">KnowSex 站长&emsp;Linn</span>
     </div>
     <div class="hr"></div>
-    <p>知性 KnowSex 是一个性教育网站，内容适合初中及以上阶段的人群阅读。</p>
-    <p>知性 KnowSex 团队独立运营本站，运营资金来源于读者的支持、站长自费和支付宝赚钱红包的推广。</p>
-    <p>本站正式名称为“知性 KnowSex”。</p>
+    <p>KnowSex 是一个性教育网站，内容适合初中及以上阶段的人群阅读。</p>
+    <p>KnowSex 团队独立运营本站，运营资金来源于读者的支持、站长自费和支付宝赚钱红包的推广。</p>
+    <p>本站正式名称为“KnowSex”。</p>
     
     <h2 class="mt-4 mb-4">相关人员</h2>
     <p>本站创始人、站长是 <b>Linn</b> 。</p>
@@ -203,7 +203,7 @@
     <p>本站注册有 Twitter 、GitHub 和即刻 App 账号。</p>
 					<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 					<p style="color: #bbb">本页封面图片作者是 <a href="https://unsplash.com/@febev">Febe Vanermen</a> ，来自 <a href="https://unsplash.com/photos/xnuGgz0ctks">Unsplash</a> 。</p>
 				</div>
@@ -220,11 +220,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
