--- a/general/communicate/index.html
+++ b/general/communicate/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,知性,KnowSex,知性KnowSex">
+	<meta name="keywords" content="性教育,KnowSex,">
 	<meta name="description" content="">
 
 	<meta property="og:image" content="/style/cover.jpg" />
 	<meta property="og:title" content="来信沟通" />
 	<meta property="og:description" content="" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>来信沟通 - 知性 KnowSex</title>
+	<title>来信沟通 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -79,7 +79,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<span class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</span>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -111,10 +111,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -145,11 +145,11 @@
     <!-- style="opacity: .5;pointer-events: none;" -->
     <div class="tip">
         <p><strong style="color:brown">医学声明：</strong></p>
-        <p style="font-weight:300">囿于团队成员知识所限，知性（KnowSex）提供的内容不能被解读为试图给予或提供特定医疗意见，或属于医疗临床实务的一部分，不能取代医护专业人士的建议和药品说明书。</p>
+        <p style="font-weight:300">囿于团队成员知识所限，KnowSex 提供的内容不能被解读为试图给予或提供特定医疗意见，或属于医疗临床实务的一部分，不能取代医护专业人士的建议和药品说明书。</p>
     </div>
     <p>如果你有自己的疑惑、焦虑希望得到我们的帮助，或者希望和我们合作，欢迎通过下面的方式来联系我们。</p>
     <p>您可以选择公开提问的内容，以帮助其他有疑虑的人。我们将对可能与您产生联系的信息抹去。</p>
-    <p>请注意，回信者的观点并不代表知性 KnowSex 官方的观点。</p>
+    <p>请注意，回信者的观点并不代表 KnowSex 官方的观点。</p>
      <h2 class="mt-4 mb-4">电子邮件</h2>
         <p>
             <a href="mailto:knowsex@outlook.com" style="text-decoration: underline; font-weight: 700; font-size: 1.2em; color:#5dbd90;">
@@ -159,14 +159,14 @@
         <p>如果太久没有收到回信，记得检查你的垃圾箱——我们的邮件可能会被误认为是垃圾邮件。</p>
      <h2 class="mt-4 mb-4">在线表单（试行）</h2>
     
-    <p>您也可以填写在线表单进行提问，可通过下方按钮或识别二维码进行填写。</p>
+    <p>您也可以填写在线表单进行提问，可通过下方按钮进行填写。</p>
     <p>如果太久没有收到回信，请回访本页面，查看下方<a href="#exception" target="_self">回信状态异常列表</a>。</p>
     <p><a class="btn btn-outline-secondary" href="https://f.kdocs.cn/w/SYut9a03/"  target="_self" role="button">填写表单</a></p>
-    <div class="img-box">
-        <img loading="lazy" src="img/kdocs.jpg?20220806" alt="表单二维码" class="img-thumbnail" style="width:100%;max-width:500px;margin:auto">
-    </div>    	
+    <!-- <div class="img-box">
+        <img loading="lazy" src="img/kdocs.svg" alt="表单二维码" class="img-thumbnail" style="width:100%;max-width:200px;margin:auto">
+    </div>    	 -->
     <h2 class="mt-4 mb-4" id="exception">回信状态异常列表</h2>
-	<p>下面是近期一些知性 KnowSex 复信组无法与来信者取得联系的情况之列表。如果您的来信位于列表中，且需要继续联系知性 KnowSex ，请根据情况与复信组取得联系，也可重新发送邮件或提交表单。</p>
+	<p>下面是近期一些 KnowSex 复信组无法与来信者取得联系的情况之列表。如果您的来信位于列表中，且需要继续联系 KnowSex ，请根据情况与复信组取得联系，也可重新发送邮件或提交表单。</p>
     <p>该列表不定期擦除，更新稍有延迟。</p>
     <p style="color: #A4A2A2">⇆ 表格若未完全显示，可左右滑动。</p>
 
@@ -219,7 +219,7 @@
 <div class="hr"></div>
 					<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 					<p style="color: #bbb">本页封面图片作者是 <a href="https://unsplash.com/@priscilladupreez">Priscilla Du Preez</a> ，来自 <a href="https://unsplash.com/photos/7s3biR6HATU">Unsplash</a> 。</p>
 				</div>
@@ -236,11 +236,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
