--- a/general/copyright/index.html
+++ b/general/copyright/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,知性,KnowSex,知性KnowSex">
-	<meta name="description" content="有关知性网站的版权。">
+	<meta name="keywords" content="性教育,KnowSex,">
+	<meta name="description" content="有关 KnowSex 的版权。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
 	<meta property="og:title" content="版权许可" />
-	<meta property="og:description" content="有关知性网站的版权。" />
+	<meta property="og:description" content="有关 KnowSex 的版权。" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>版权许可 - 知性 KnowSex</title>
+	<title>版权许可 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -80,7 +80,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<span class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</span>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -112,10 +112,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -142,21 +142,21 @@
 				<div class="main">
 					<p><a href='#版权许可' target='_self'>简体中文</a> / <a href='#license' target='_self'>English(Machine Translation)</a></p>
 <h1 id='版权许可'>版权许可</h1>
-<p>本文编辑于 2021 年 10 月 27 日。</p>
+<p>本文编辑于 2023 年 4 月 5 日。</p>
 <h2 id='内容部分'>内容部分</h2>
-<p>知性（KnowSex.net）网站的文章文字部分允许您在</p>
+<p>KnowSex.net 网站的文章文字部分允许您在</p>
 <ol>
 <li>附上原文链接；</li>
 <li>不用于商业用途；</li>
-<li>标明来源于知性（KnowSex.net）；</li>
+<li>标明来源于 KnowSex（KnowSex.net）；</li>
 <li>不违反中华人民共和国法律及您使用时涉及的国家或地区的法律</li>
 
 </ol>
 <p>之情况下使用。</p>
-<p>若有可能违背上述条款的行为，请与知性<a href='mailto:knowsex@outlook.com'>通过邮件联系</a>（<a href='mailto:knowsex@outlook.com' target='_blank' class='url'>knowsex@outlook.com</a>）。</p>
-<p>对于图片部分，版权请参考附于文末的“图片来源”的“来源”列，按照原作者的版权要求进行使用。若无特殊说明，在您遵守 <a href='http://creativecommons.org/licenses/by-sa/4.0/'>署名-相同方式共享 4.0 国际</a> 许可时，这些图片均在符合版权规定使用的范围内。</p>
+<p>若有可能违背上述条款的行为，请与 KnowSex <a href='mailto:knowsex@outlook.com'>通过邮件联系</a>（<a href='mailto:knowsex@outlook.com' target='_blank' class='url'>knowsex@outlook.com</a>）。</p>
+<p>对于图片部分，版权请参考附于文末的“图片来源”的“来源”列，按照原作者的版权要求进行使用。</p>
 <p>您不得利用本站撰写之内容创建几乎完全一致的、相似功能的传播资料。</p>
-<p>知性（KnowSex.net）不为您的行为之后果背书。</p>
+<p>KnowSex（KnowSex.net）不为您的行为之后果背书。</p>
 <h2 id='外观设计'>外观设计</h2>
 <p>关于网站的外观设计，包括但不限于网站的 HTML、CSS 和 JavaScript 代码，您可以在</p>
 <ol>
@@ -165,13 +165,13 @@
 
 </ol>
 <p>之情况下使用。</p>
-<p>知性（KnowSex.net）不对您使用这些代码的一切后果负责。</p>
+<p>KnowSex（KnowSex.net）不对您使用这些代码的一切后果负责。</p>
 <p><a class="btn btn-outline-secondary" href="/" target="_self" role="button">返回主页</a></p>
 
 <div lang="en" class="mt-5">
     <h1 id='license'>LICENSE</h1>
     <p><strong>NOTICE: Translated with <a href='http://www.DeepL.com/Translator' target='_blank' class='url'>www.DeepL.com/Translator</a> , translation is machine translation, for reference only, the original Simplified Chinese text shall prevail.</strong></p>
-    <p>This article was edited on October 27, 2021.</p>
+    <p>This article was edited on April 5, 2023.</p>
     <h2 id='content'>Content</h2>
     <p>The text part of the article on KnowSex.net allows you to use it under the following conditions: </p>
     <ol>
@@ -182,7 +182,7 @@
     
     </ol>
     <p>If there is any possible violation of the above terms, please contact KnowSex <a href='mailto:knowsex@outlook.com'>by email</a> (<a href='mailto:knowsex@outlook.com' target='_blank' class='url'>knowsex@outlook.com</a>).</p>
-    <p>For images, please refer to the &quot;Source&quot; column in the &quot;Image Sources&quot; section at the end of the article, and use them in accordance with the copyright requirements of the original author. Unless otherwise noted, these images are used in accordance with the copyrighted use of the <a href='http://creativecommons.org/licenses/by-sa/4.0/'>BY-SA 4.0 International</a> license when you comply with it.</p>
+    <p>For images, please refer to the "Source" column in the "Image Sources" section at the end of the article, and use them in accordance with the copyright requirements of the original author. </p>
     <p>You may not use the content written on KnowSex.net to create virtually identical, functionally similar communications.</p>
     <p>KnowSex.net does not endorse the consequences of your actions.</p>
     <h2 id='design'>Design</h2>
@@ -199,7 +199,7 @@
 
 					<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 									</div>
 			</div>
@@ -215,11 +215,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
