--- a/general/encourage/index.html
+++ b/general/encourage/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,知性,KnowSex,知性KnowSex">
-	<meta name="description" content="关于如何支持知性更好地运营维护。">
+	<meta name="keywords" content="性教育,KnowSex,">
+	<meta name="description" content="关于如何支持 KnowSex 更好地运营维护。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
-	<meta property="og:title" content="支持知性" />
-	<meta property="og:description" content="关于如何支持知性更好地运营维护。" />
+	<meta property="og:title" content="支持" />
+	<meta property="og:description" content="关于如何支持 KnowSex 更好地运营维护。" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>支持知性 - 知性 KnowSex</title>
+	<title>支持 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -95,7 +95,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<span class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</span>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -127,10 +127,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -148,33 +148,32 @@
 					<div class="header-img donate-bg"></div>
 					<div class="header-cover">
 						<div class="header-title">
-							<h1 itemprop="headline">支持知性</h1>
+							<h1 itemprop="headline">支持</h1>
 							<p>Encourage</p>
 						</div>
 					</div>
 				</div>
 				<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 				<div class="main">
-					    <p>感谢您访问知性 KnowSex 。</p>
-	<p>知性 KnowSex 团队独立运营本站，运营资金来源于读者的支持、站长自费和支付宝赚钱红包的推广。</p>
-	<p>如果您觉得知性不错，希望您可以推荐给朋友，宣传知性网站。如果您有意见和疑问，也欢迎给我们发邮件，在页面底部您可以找到邮箱地址。</p>
-    <p>您也可以使用微信扫码支持知性，您的支持是我们维护知性网站的动力。</p>
-	<p>您亦可扫描使用知性的支付宝消费红包，可用于到店消费。使用知性提供的红包会给知性一定的收益。</p>
-	<p>知性以年为单位更新资金使用情况，每年年初以电子表格形式公布详单。您可在<a href="../fund/">资金详单</a>页面下载已公布的资金详单。</p>
+					    <p>感谢您访问 KnowSex 。</p>
+	<p>KnowSex 团队独立运营本站，运营资金来源于读者的支持、站长自费和支付宝赚钱红包的推广。</p>
+	<p>如果您觉得 KnowSex 不错，希望您可以推荐给朋友，宣传 KnowSex 网站。如果您有意见和疑问，也欢迎给我们发邮件，在页面底部您可以找到邮箱地址。</p>
+    
+	<p>您也可以使用微信扫码支持 KnowSex，您的支持是我们维护 KnowSex 网站的动力。</p>
+	<!-- <p>您亦可扫描使用 KnowSex 的支付宝消费红包，可用于到店消费。使用 KnowSex 提供的红包会给 KnowSex 一定的收益。</p>		 -->
+	
+	<p>KnowSex 以年为单位更新资金使用情况，每年年初以电子表格形式公布详单。您可在<a href="../fund/">资金详单</a>页面下载已公布的资金详单。</p>
 	<div class="row show">
 		<div class="col-md-6 img-box">
 			<img loading="lazy" src="img/wechatCode.jpg" alt="收款码" class="img-thumbnail" style="width:100%;max-width:500px">
 		</div>
-		<div class="col-md-6 img-box">
-			<img loading="lazy" src="img/alipayCode_Pub.jpg" alt="支付宝红包" class="img-thumbnail" style="width:100%;max-width:500px">
-		</div>
-	</div>
-    <p>衷心感谢您对知性的支持与喜爱。我们与您一起期待性教育更好的普及和推广。</p>
+			</div>
+    <p>衷心感谢您对 KnowSex 的支持与喜爱。我们与您一起期待性教育更好的普及和推广。</p>
 		<div class="hr"></div>
 
 					<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 					<p style="color: #bbb">本页封面图片作者是 Linn 。</p>
 				</div>
@@ -191,11 +190,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
