--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,知性,KnowSex,知性KnowSex">
-	<meta name="description" content="知性 KnowSex 是一个性教育网站。">
+	<meta name="keywords" content="性教育,KnowSex,">
+	<meta name="description" content="KnowSex 是一个性教育网站。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
-	<meta property="og:title" content="知性 KnowSex" />
-	<meta property="og:description" content="知性 KnowSex 是一个性教育网站。" />
+	<meta property="og:title" content=" KnowSex" />
+	<meta property="og:description" content="KnowSex 是一个性教育网站。" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>知性 KnowSex</title>
+	<title>KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -85,7 +85,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<h1 class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</h1>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -117,10 +117,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -137,7 +137,7 @@
                 <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-04-01</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-04-05</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -217,7 +217,7 @@
         </blockquote>
 									<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 					    </div>
 				</div>
@@ -234,11 +234,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
