--- a/main/contraception/index.html
+++ b/main/contraception/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="避孕,性教育,知性,KnowSex,知性KnowSex">
+	<meta name="keywords" content="避孕,性教育,KnowSex,">
 	<meta name="description" content="关于避孕的介绍。涵盖多种避孕方法的介绍和避孕方法的比较说明。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
 	<meta property="og:title" content="避孕" />
 	<meta property="og:description" content="关于避孕的介绍。涵盖多种避孕方法的介绍和避孕方法的比较说明。" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>避孕 - 知性 KnowSex</title>
+	<title>避孕 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -79,7 +79,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<span class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</span>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -111,10 +111,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -159,7 +159,7 @@
         <p>在文末，会提供一份避孕措施表格以供参考。</p>
         <div class="tip">
             <p><strong style="color:brown">医学声明：</strong></p>
-            <p style="font-weight:300">知性 KnowSex 提供的内容不能被解读为试图给予或提供特定医疗意见，或属于医疗临床实务的一部分，不能取代医护专业人士的建议和药品说明书。</p>
+            <p style="font-weight:300">KnowSex 提供的内容不能被解读为试图给予或提供特定医疗意见，或属于医疗临床实务的一部分，不能取代医护专业人士的建议和药品说明书。</p>
             <p style="font-weight:300">因体质因人而异，请在用药前仔细阅读药品说明书。若您需医疗服务或可靠意见，请咨询药店药剂师、医师或专业人士。相关药品推荐应在说明书和医师指导下使用。</p>
         </div>
 
@@ -275,7 +275,7 @@
             <li><a href="https://www.msdmanuals.cn/home/quick-facts-women-s-health-issues/family-planning/abortion">小知识: 人工流产 - 《默沙东诊疗手册大众版》</a></li>
             <li><a href="https://www.msdmanuals.cn/home/women-s-health-issues/family-planning/abortion">人工流产 - 《默沙东诊疗手册大众版》</a></li>
           </ul>
-          <p><small>这些页面不属于知性。如果您无法访问这些页面，可<a href="/general/communicate">联系我们</a>索取副本。</small></p>
+          <p><small>这些页面不属于 KnowSex。如果您无法访问这些页面，可<a href="/general/communicate">联系我们</a>索取副本。</small></p>
         </div>
         
 
@@ -402,7 +402,7 @@
         <p>本节正文内容已结束。</p>
 					<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 					         <h2 class="mt-4 mb-4 reference">参考资料</h2>
             <ol class="reference-list">
@@ -514,11 +514,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
