--- a/main/human-reproductive-system/index.html
+++ b/main/human-reproductive-system/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="生殖系统,性教育,知性,KnowSex,知性KnowSex">
+	<meta name="keywords" content="生殖系统,性教育,KnowSex,">
 	<meta name="description" content="对于人类生殖系统的描述和介绍。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
 	<meta property="og:title" content="人类生殖系统" />
 	<meta property="og:description" content="对于人类生殖系统的描述和介绍。" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>人类生殖系统 - 知性 KnowSex</title>
+	<title>人类生殖系统 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -81,7 +81,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<span class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</span>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,10 +113,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -186,7 +186,7 @@
 				<img loading="lazy" src="models/ar_hand_prompt.png">
 			</div>
 		</model-viewer>  
-		<small>模型来自 <a href="https://hiddenbeauty.ch/">Hidden Beauty</a> ，编号为 <a href="https://hiddenbeauty.ch/model/426060-VSNN-1">426060-VSNN-1</a> ，其以 <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC 0</a> 协议发布。知性 KnowSex 对模型有略作修改。</small>
+		<small>模型来自 <a href="https://hiddenbeauty.ch/">Hidden Beauty</a> ，编号为 <a href="https://hiddenbeauty.ch/model/426060-VSNN-1">426060-VSNN-1</a> ，其以 <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC 0</a> 协议发布。KnowSex 对模型有略作修改。</small>
 		
 		<h3 class="mt-4 mb-3" id="女性生殖器简述">生殖器简述</h3>
 		<p>
@@ -343,7 +343,7 @@
 				<img loading="lazy" src="models/ar_hand_prompt.png">
 			</div>
 		</model-viewer>  
-		<small>模型由 <a href="https://sketchfab.com/rossthren">rossthren</a> 制作，于 <a href="https://sketchfab.com/3d-models/flaccid-penis-37dd96fb488548789bffb54dc152e6f9">Sketchfab</a> 以 <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> 协议发布，知性 KnowSex 对模型有略作修改。</small>
+		<small>模型由 <a href="https://sketchfab.com/rossthren">rossthren</a> 制作，于 <a href="https://sketchfab.com/3d-models/flaccid-penis-37dd96fb488548789bffb54dc152e6f9">Sketchfab</a> 以 <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> 协议发布，KnowSex 对模型有略作修改。</small>
 		<h3 class="mt-4 mb-3">生殖器简述</h3>
 		<p>如图为男性<strong>阴茎</strong>。阴茎是男性<strong>排尿</strong>和<strong>交配</strong>的器官。</p>
 		<p>男性生殖系统可以分为外生殖系统以及内生殖系统。</p>
@@ -420,7 +420,7 @@
 
 							<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 							 <h2 class="mt-4 mb-4 reference">参考资料</h2>
 		<ol class="reference-list">
@@ -607,8 +607,8 @@
 		<p lang="en">The copyright of the book owned by Oxford University Press, Inc. and the copyright notice is as follows.</p>
 		<blockquote lang="en">Copyright © 2000 by Oxford University Press, Inc.</blockquote>
 		<h3 class="mt-4 mb-3">关于模型展示</h3>
-		<p>“女性形态外阴”模型来自 <a href="https://hiddenbeauty.ch/">Hidden Beauty</a> ，编号为 <a href="https://hiddenbeauty.ch/model/426060-VSNN-1">426060-VSNN-1</a> ，其以 <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC 0</a> 协议发布。知性 KnowSex 对模型有略作修改。</p>
-		<p>“阴茎与阴囊”模型由 <a href="https://sketchfab.com/rossthren">rossthren</a> 制作，于 <a href="https://sketchfab.com/3d-models/flaccid-penis-37dd96fb488548789bffb54dc152e6f9">Sketchfab</a> 以 <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> 协议发布，知性 KnowSex 对模型有略作修改。</p>
+		<p>“女性形态外阴”模型来自 <a href="https://hiddenbeauty.ch/">Hidden Beauty</a> ，编号为 <a href="https://hiddenbeauty.ch/model/426060-VSNN-1">426060-VSNN-1</a> ，其以 <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC 0</a> 协议发布。KnowSex 对模型有略作修改。</p>
+		<p>“阴茎与阴囊”模型由 <a href="https://sketchfab.com/rossthren">rossthren</a> 制作，于 <a href="https://sketchfab.com/3d-models/flaccid-penis-37dd96fb488548789bffb54dc152e6f9">Sketchfab</a> 以 <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> 协议发布，KnowSex 对模型有略作修改。</p>
 		<p>模型展示功能基于 <a href="https://modelviewer.dev/"><code>&lt;model-viewer&gt;</code></a> ，其许可证使用 <a href="https://github.com/google/model-viewer/blob/master/LICENSE">Apache License 2.0</a> 。</p>
 	</div>
 
@@ -626,11 +626,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
