--- a/main/other-media/index.html
+++ b/main/other-media/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="知性,KnowSex,知性KnowSex,性教育,性教育资源,性教育,知性,KnowSex,知性KnowSex">
-	<meta name="description" content="知性KnowSex内容的其他媒介版本。">
+	<meta name="keywords" content="KnowSex,性教育,性教育资源,性教育,KnowSex,">
+	<meta name="description" content="KnowSex 内容的其他媒介版本。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
 	<meta property="og:title" content="其他媒介版本" />
-	<meta property="og:description" content="知性KnowSex内容的其他媒介版本。" />
+	<meta property="og:description" content="KnowSex 内容的其他媒介版本。" />
 	<meta property="og:locale" content="zh_CN" />
-	<meta property="og:site_name" content="知性 KnowSex" />
+	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
 
 	<meta name="twitter:site" content="@knowsex_net" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>其他媒介版本 - 知性 KnowSex</title>
+	<title>其他媒介版本 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -82,7 +82,7 @@
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 		  <a href="/" target="_self"> 			<span class="title">
-								<img loading="lazy" src="/style/knowsex.svg" alt="知性 KnowSex" style="height: 20px; vertical-align: baseline;">
+								<img loading="lazy" src="/style/knowsex.svg" alt="KnowSex" style="height: 20px; vertical-align: baseline;">
 			</span>
 		</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,10 +114,10 @@
 					</a>
 					<ul class="dropdown-menu text-center">
 					  <li><a class="dropdown-item" href="/general/copyright">版权许可</a></li>
-					  <li><a class="dropdown-item" href="/general/encourage">支持知性</a></li>
+					  <li><a class="dropdown-item" href="/general/encourage">支持</a></li>
 					  <li><a class="dropdown-item" href="/general/fund">资金详单</a></li>
 					  <li><a class="dropdown-item" href="/general/communicate">来信沟通</a></li>
-					  <li><a class="dropdown-item" href="/general/about">关于知性</a></li>
+					  <li><a class="dropdown-item" href="/general/about">关于</a></li>
 					  <!-- <li><hr class="dropdown-divider"></li> -->
 					</ul>
 				  </li>
@@ -143,7 +143,7 @@
 				<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 				<div class="main">
 					
-<p>考虑到读者的需要，知性 KnowSex 在此页提供部分页面的其他媒介版本，供有需要的读者使用。不过，其他媒介版本内容可能会滞后于网页版。</p>
+<p>考虑到读者的需要，KnowSex 在此页提供部分页面的其他媒介版本，供有需要的读者使用。不过，其他媒介版本内容可能会滞后于网页版。</p>
 <p>印刷版材料可用常规办公打印机或商用打印机进行打印。</p>
 <p>如果您愿意，欢迎您参与对其他媒介使用的问卷反馈。</p>
 <a class="btn btn-outline-secondary" href="https://f.kdocs.cn/w/3uaQFBgx/">参与反馈</a>
@@ -162,7 +162,7 @@
 
 					<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
-						style="text-decoration:underline">支持</a> 可以鼓励知性的维护与运营。</p>
+						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
 					
 <p>本页封面图片作者是 <a href="https://unsplash.com/@rumpf">Christina Rumpf</a>，来自 <a href="https://unsplash.com/photos/XWDMmk-yW7Q">Unsplash</a> 。</p>
@@ -181,11 +181,14 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-						<li class="list-inline-item"><a href="/general/encourage">支持知性</a></li>
-						<li class="list-inline-item"><a href="/general/about">关于知性</a></li>
+						<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
+						<li class="list-inline-item"><a href="/general/about">关于</a></li>
 					</ul>
-					<p><img loading="lazy" src="/favicon.ico" height="26" alt="知性标志" aria-hidden="true">&nbsp;知性&nbsp;KnowSex</p>
+					<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex</p>
 									</div>
+				<hr class="hidden-lg" style="width: 20%; height: 3px;
+				background-color: #afafaf; margin-left: 12px;">
+				<!-- <span class="hidden-lg key mb-1" style="color: #eee">*</span> -->
 				<div class="col-md-7 text-md-end my-1">
 					<p class="key">Made in Zhengzhou with love.</p>
 
