--- a/general/about/index.html
+++ b/general/about/index.html
@@ -182,7 +182,7 @@
 				<div class="main">
 					    <div class="center-block quote">
         <p>
-            KnowSex 致力于提供直观、明了的生理知识，解答群众困惑，并希望藉此减少一些社会问题的发生。
+            KnowSex 致力于提供直观、明了的性知识，解答群众困惑，并希望藉此减少一些社会问题的发生。
         </p>
         <span class="source">KnowSex 站长&emsp;Linn</span>
     </div>
@@ -200,7 +200,7 @@
     
     <h2 class="mt-4 mb-4">社交媒体</h2>
     <p>在页面底部您可以找到我们的社交媒体平台。</p>
-    <p>本站注册有 Twitter 、GitHub 和即刻 App 账号。</p>
+    <p>本站注册有 Twitter 、GitHub 、Mastodon 和即刻 App 账号。</p>
 					<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;">⭐ 你的 <a href="/general/encourage"
 						style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
