对于视障人群无障碍优化。

--- a/main/std/syphilis/index.html
+++ b/main/std/syphilis/index.html
@@ -183,17 +183,17 @@
 			<div class="main">
 				<p>梅毒是一种由病毒引起的性传播疾病。梅毒会引起人体多种多器官的损害。根据病情进程的不同，可以分为一期、二期、潜伏期和三期。</p>
 <h2>传播</h2>
-<p>梅毒经常经过密切性接触（包括接吻）传播。该病毒也可透过黏膜表面或皮肤伤口进入。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup>孕妇若患有梅毒，胎儿可能会被感染。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup></p>
-<p>偶然接触（共用马桶坐垫、游泳池等）一般不会导致感染。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
+<p>梅毒经常经过密切性接触（包括接吻）传播。该病毒也可透过黏膜表面或皮肤伤口进入。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup>孕妇若患有梅毒，胎儿可能会被感染。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup></p>
+<p>偶然接触（共用马桶坐垫、游泳池等）一般不会导致感染。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 
 <h2>症状</h2>
-<p>对于由他人传染的，称为<strong>后天性梅毒</strong>。胎儿被母亲传染的，称为<strong>先天性梅毒</strong>。关系如下所示。<sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self">[3]</a></sup></p>
+<p>对于由他人传染的，称为<strong>后天性梅毒</strong>。胎儿被母亲传染的，称为<strong>先天性梅毒</strong>。关系如下所示。<sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self" aria-label="佐证资料">[3]</a></sup></p>
 <img loading="lazy" class="dark-invert" src="img/Syphilis.svg" style="width: 100%; max-width: 600px" alt="这是一张梅毒种类及分期图。梅毒分为胎传性梅毒和获得性梅毒，它们也叫做先天梅毒和后天梅毒。不论是何种梅毒，病程小于两年的为早期，大于两年的为晚期。对于后天梅毒，在早期又可分为一期梅毒、二期梅毒和早期潜伏梅毒。先天梅毒在早期不做区分，其症状类似于后天梅毒的第二期。而在晚期，无论是先天梅毒还是后天梅毒，都可以分为皮肤黏膜骨骼梅毒、心血管梅毒、神经梅毒和晚期潜伏梅毒。"><br><br>
 
 <h3>一期梅毒</h3>
-<p>一期梅毒以一种名为<strong>硬下疳</strong>的皮肤损害为标志。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup>硬下疳表现为在病毒进入身体的位置产生豌豆大小的红色硬结块。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
-<p>硬下疳会在 2 ~ 4 周<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup><sup id="cite_ref-梅毒诊断" class="reference"><a href="#cite_note-梅毒诊断" target="_self">[5]</a></sup>内出现。如不治疗，会在 3 ~ 6 周<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup>后消失。但此时病毒仍在体内，具有高传染性。</p>
-<p>即使症状消失，仍应在此时接受治疗，以免进入二期梅毒阶段。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
+<p>一期梅毒以一种名为<strong>硬下疳</strong>的皮肤损害为标志。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup>硬下疳表现为在病毒进入身体的位置产生豌豆大小的红色硬结块。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
+<p>硬下疳会在 2 ~ 4 周<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-梅毒诊断" class="reference"><a href="#cite_note-梅毒诊断" target="_self" aria-label="佐证资料">[5]</a></sup>内出现。如不治疗，会在 3 ~ 6 周<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup>后消失。但此时病毒仍在体内，具有高传染性。</p>
+<p>即使症状消失，仍应在此时接受治疗，以免进入二期梅毒阶段。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 <div class="click-to-show">
   <div class="row show">
     <div class="col-md-6 img-box">
@@ -204,8 +204,8 @@
 		</div>
 </div>
 <h3>二期梅毒</h3>
-<p>在不经治疗的情况下，硬下疳消失后的几周至几个月内，会出现全身皮疹。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup>此时，有可能出现头痛、发烧、关节疼痛等现象。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup>在此阶段，病毒大量繁殖播散，散布于黏膜分泌物（例如生殖器分泌物、口水）、血液、皮肤损害中。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup></p>
-<p>无论是否治疗，此阶段的症状仍会自行消失。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
+<p>在不经治疗的情况下，硬下疳消失后的几周至几个月内，会出现全身皮疹。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup>此时，有可能出现头痛、发烧、关节疼痛等现象。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup>在此阶段，病毒大量繁殖播散，散布于黏膜分泌物（例如生殖器分泌物、口水）、血液、皮肤损害中。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup></p>
+<p>无论是否治疗，此阶段的症状仍会自行消失。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 <div class="click-to-show">
   <div class="row show">
     <div class="col-md-6 img-box">
@@ -217,7 +217,7 @@
 </div>
 
 <h3>潜伏期</h3>
-<p>二期梅毒过后，病程会进入 2 ~ 20 年的潜伏期。此阶段无症状，也不传染。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup>此阶段病毒进入血管、骨骼和中枢神经。如果由此引起症状，即是三期梅毒。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup>但也有可能永远不再产生症状，不再传染给性伴侣。但孕妇仍可传给胎儿。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup></p>
+<p>二期梅毒过后，病程会进入 2 ~ 20 年的潜伏期。此阶段无症状，也不传染。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup>此阶段病毒进入血管、骨骼和中枢神经。如果由此引起症状，即是三期梅毒。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup>但也有可能永远不再产生症状，不再传染给性伴侣。但孕妇仍可传给胎儿。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup></p>
 <h3>三期梅毒</h3>
 <p>大约有 33% ~ 50% 的患者进入三期梅毒。此时全身各脏器受到影响，以心血管系统与中枢神经受影响最甚。患者感染 10 ~ 20 年可出现失明、痴呆、瘫痪等症状，最终可导致死亡。</p>
 <div class="click-to-show">
@@ -230,11 +230,11 @@
 		</div>
 </div>
 <h3>先天性梅毒</h3>
-<p>未经治疗的、患有梅毒的孕妇，大概率会发生流产、死产，或生出有<strong>先天性梅毒</strong>（亦称<strong>胎传梅毒</strong>）的婴儿。先天性梅毒导致孩子患有精神紊乱或迟钝、面部畸形等生育缺陷，通常在两岁出现获得性二期梅毒的相关症状<sup id="cite_ref-梅毒诊断" class="reference"><a href="#cite_note-梅毒诊断" target="_self">[5]</a></sup>。不过，在怀孕前半期进行治疗，可防范孩子患上先天性梅毒。</p>
-<p>对于梅毒血清学实验为阳性，但没有临床症状，脑脊液检查也正常的，为<strong>隐性胎传梅毒</strong>。<sup id="cite_ref-梅毒诊断" class="reference"><a href="#cite_note-梅毒诊断" target="_self">[5]</a></sup></p>
+<p>未经治疗的、患有梅毒的孕妇，大概率会发生流产、死产，或生出有<strong>先天性梅毒</strong>（亦称<strong>胎传梅毒</strong>）的婴儿。先天性梅毒导致孩子患有精神紊乱或迟钝、面部畸形等生育缺陷，通常在两岁出现获得性二期梅毒的相关症状<sup id="cite_ref-梅毒诊断" class="reference"><a href="#cite_note-梅毒诊断" target="_self" aria-label="佐证资料">[5]</a></sup>。不过，在怀孕前半期进行治疗，可防范孩子患上先天性梅毒。</p>
+<p>对于梅毒血清学实验为阳性，但没有临床症状，脑脊液检查也正常的，为<strong>隐性胎传梅毒</strong>。<sup id="cite_ref-梅毒诊断" class="reference"><a href="#cite_note-梅毒诊断" target="_self" aria-label="佐证资料">[5]</a></sup></p>
 <h2>预后</h2>
-<p>经治疗，多数的一期梅毒可在一年内、二期梅毒可在两年内治愈。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup>三期梅毒的预后情况取决于脏器的受损程度，给予手术和药物治疗，可拯救或延长生命。</p>
-<p>在治愈后，也有可能会再次感染梅毒。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
+<p>经治疗，多数的一期梅毒可在一年内、二期梅毒可在两年内治愈。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup>三期梅毒的预后情况取决于脏器的受损程度，给予手术和药物治疗，可拯救或延长生命。</p>
+<p>在治愈后，也有可能会再次感染梅毒。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
@@ -309,7 +309,7 @@
 			<div class="col-md-7 text-md-end my-1">
 				<p class="key">Made in Zhengzhou with love.</p>
 
-				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
 						<rect width="48" height="48" fill="white" fill-opacity="0.01" />
 						<path d="M4 39H44V24V9H24H4V24V39Z" fill="none" stroke="#4e4e4e" stroke-width="4"
 							stroke-linejoin="round" />
@@ -326,8 +326,8 @@
 				</p>
 
 				<p>
-					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon">
-						<svg viewBox="0 0 24 24" aria-label="推特社交平台账号" style="width:26px;">
+					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon" aria-label="推特社交平台账号">
+						<svg viewBox="0 0 24 24" style="width:26px;">
 							<g>
 								<path
 									d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"
@@ -335,14 +335,14 @@
 							</g>
 						</svg>
 					</a>
-					<a href="https://github.com/knowsex" class="me-2 social-icon">
-						<svg viewBox="0 0 16 16" aria-label="代码托管GitHub账号" version="1.1" style="width:26px;">
+					<a href="https://github.com/knowsex" class="me-2 social-icon" aria-label="代码托管GitHub账号">
+						<svg viewBox="0 0 16 16" version="1.1" style="width:26px;">
 							<path fill="#4e4e4e" fill-rule="evenodd"
 								d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
 							</path>
 						</svg>
 					</a>
-					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur">
+					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur" aria-label="即刻App社交平台账号">
 						<!-- <img loading="lazy" src="/sub/jike.png" width="26" alt="即刻App社交平台账号"> -->
 						<svg data-name="图层 1" width="26" version="1.1" viewBox="0 0 1508 1508"
 							xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#"
@@ -372,7 +372,7 @@
 								d="m-264.89 821.91c-69.763-95.398-134.93-194.87-204.3-288.31-6.4103-10.646-8.8126-22.29 0.98-30.05 64.786-51.755 134.42-86.236 184.09-144.73 67.79-76.967 93.036-155.44 98.81-254.37-2.9988-237.81 2.4822-474.24-0.78-710.07-0.21-16.26 9.93-22.9 24.32-23.08 124.93 5.0241 252.32-6.7107 375.52-0.21 11.21 0.63 19.27 10.75 18.68 22.28-0.0943 229.49 2.6818 459.23 2.1 686.46-0.06 17.55-0.77 35.1-1.42 52.65-4.536 131.36-33.337 264.34-103.89 373.94-89.299 138.93-220.9 230.81-352.54 322.08-18.604 13.423-28.975 11.846-41.57-6.59z" />
 						</svg>
 					</a>
-					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon">
+					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon" aria-label="Mastodon社交账号">
 						<svg width="26" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 216.4144 232.00976">
 							<path
 								d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915"
