--- a/main/sexual-activity/index.html
+++ b/main/sexual-activity/index.html
@@ -182,7 +182,7 @@
 			在本节，性行为被分为一人以上的<strong>性交</strong>和自身性行为<strong>自慰</strong>两类进行叙述。
 		</p>
 		 <h2 class="mt-4 mb-4">性交</h2>
-		<p><strong>性交</strong>，又称<strong>性爱</strong>、<strong>做爱</strong>、<strong>ML</strong>（英文 make love 之缩写），一般是指性器官接触的行为，如<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self">[1]</a></sup></p> 
+		<p><strong>性交</strong>，又称<strong>性爱</strong>、<strong>做爱</strong>、<strong>ML</strong>（英文 make love 之缩写），一般是指性器官接触的行为，如<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self" aria-label="佐证资料">[1]</a></sup></p> 
 		<ul>
 			<li>阴茎插入阴道、 </li>
 			<li><strong>肛交</strong>（阴茎插入肛门）</li>
@@ -191,15 +191,15 @@
 			<li><strong>以其他物品（如假阴茎等）插入</strong>对方体内（如阴道、肛门等）等等。</li>
 		</ul>
 		
-		<p>性交的主要目的是为了获得性快感、繁殖下一代（仅阴茎插入阴道之行为，详见下文<a href="#new" target="_self">新生命</a>一节）。<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self">[1]</a></sup>所以，一般会反复刺激性器官使之发生性高潮，如阴茎—阴道性交中将阴茎反复插入、抽出。</p>
-		<p>无论何种阴道性交，初次性交并<span class="key">不一定</span>会出血或疼痛。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[9]</a></sup></p>
+		<p>性交的主要目的是为了获得性快感、繁殖下一代（仅阴茎插入阴道之行为，详见下文<a href="#new" target="_self">新生命</a>一节）。<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self" aria-label="佐证资料">[1]</a></sup>所以，一般会反复刺激性器官使之发生性高潮，如阴茎—阴道性交中将阴茎反复插入、抽出。</p>
+		<p>无论何种阴道性交，初次性交并<span class="key">不一定</span>会出血或疼痛。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[9]</a></sup></p>
 		<h3 class="mt-4 mb-3">风险</h3>
 		<p>尽管性行为对身心健康和个人关系具有一定意义上积极的影响，但仍然有一些潜在的风险。然而，这些风险并不是让人们放弃性行为、因噎废食的理由，而是需要我们更加了解如何在性行为中保护自己和他人，并在做出决定前全面考虑这些风险。</p>
 		<p>
-			进行性行为的安全风险主要有：<strong>意外怀孕</strong>（仅异性性行为）、<strong>性传播疾病感染</strong>、<strong>身体伤害</strong>和<strong>精神伤害</strong><sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self">[3]</a></sup>。
+			进行性行为的安全风险主要有：<strong>意外怀孕</strong>（仅异性性行为）、<strong>性传播疾病感染</strong>、<strong>身体伤害</strong>和<strong>精神伤害</strong><sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self" aria-label="佐证资料">[3]</a></sup>。
 		</p>
 			
-		<p>对于异性性行为，若男性阴茎射出的精液进入女性阴道内，则有可能导致女性怀孕。此外，精液与外阴的接触也有几率怀孕。<sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self">[3]</a></sup>男性在受到性刺激时会由尿道口分泌透明无色而略粘稠的预射精液（尿道球腺液，常被误认为是前列腺液），当中也含有少量精子，因此亦可有几率导致女性怀孕。欲了解详情，可在稍后阅读本站内《避孕》一章。</p>
+		<p>对于异性性行为，若男性阴茎射出的精液进入女性阴道内，则有可能导致女性怀孕。此外，精液与外阴的接触也有几率怀孕。<sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self" aria-label="佐证资料">[3]</a></sup>男性在受到性刺激时会由尿道口分泌透明无色而略粘稠的预射精液（尿道球腺液，常被误认为是前列腺液），当中也含有少量精子，因此亦可有几率导致女性怀孕。欲了解详情，可在稍后阅读本站内《避孕》一章。</p>
 		<p>性传播疾病可由皮肤、体液和粘膜的接触传染，患者有时外表并无症状。 </p>
 		<p>使用避孕套（又叫做安全套）是有效且便捷地防止意外怀孕、隔绝部分性传播疾病感染的方法。避孕套是一种广泛应用的医疗用品，通常用于覆盖男性阴茎，在药店、超市或便利店等地方都可以买到。作为一种医疗用品，在使用前，请仔细阅读避孕套盒内的说明书或说明文字，详细了解用途和使用方法。关于避孕套的使用步骤，也可参考 wikiHow 的文章：</p>
 		<p><a class="btn btn-outline-secondary" href="https://zh.wikihow.com/%E4%BD%BF%E7%94%A8%E9%81%BF%E5%AD%95%E5%A5%97"  role="button">如何使用避孕套 - wikiHow</a></p>
@@ -219,15 +219,15 @@
 		<p>自慰，也作手淫，是指对自我性器官进行性刺激以达到<strong>高潮</strong>和快感的性行为。 </p>
 		<p>私下地自慰并不可耻，是一种正常而自然的行为。不必对私下自慰的行为感到焦虑和自责。</p>
 
-		<p>有许多言论认为自慰会影响心理和生理健康，但医学界普遍认为自慰是一种正常的行为。<sup id="cite_ref-自慰" class="reference"><a href="#cite_note-自慰" target="_self">[4]</a></sup><sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[9]</a></sup>医学书籍《默沙东诊疗手册》认为，只有<sup id="cite_ref-性行为概述" class="reference"><a href="#cite_note-性行为概述" target="_self">[2]</a></sup></p>
+		<p>有许多言论认为自慰会影响心理和生理健康，但医学界普遍认为自慰是一种正常的行为。<sup id="cite_ref-自慰" class="reference"><a href="#cite_note-自慰" target="_self" aria-label="佐证资料">[4]</a></sup><sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[9]</a></sup>医学书籍《默沙东诊疗手册》认为，只有<sup id="cite_ref-性行为概述" class="reference"><a href="#cite_note-性行为概述" target="_self" aria-label="佐证资料">[2]</a></sup></p>
 		<ul>
 			<li>当自慰抑制了伴侣之间的性行为 </li>
 			<li>公开场合进行 </li>
 			<li>成为<strong>强迫性冲动</strong>行为造成困扰时 </li>
 		</ul>
-		<p>才被认为是不正常的，<span class="key">大约有 97％ 的男性及 80％ 的女性进行过自慰</span>。<sup id="cite_ref-性行为概述" class="reference"><a href="#cite_note-性行为概述" target="_self">[2]</a></sup></p>
+		<p>才被认为是不正常的，<span class="key">大约有 97％ 的男性及 80％ 的女性进行过自慰</span>。<sup id="cite_ref-性行为概述" class="reference"><a href="#cite_note-性行为概述" target="_self" aria-label="佐证资料">[2]</a></sup></p>
 		<p>请注意，自慰行为仅限于在私下场合进行，<span class="key">在公开场合进行自慰不仅违背公德，且在许多国家或地区是违反法律的行为 </span>。<sup><a href="#note" id="light" target="_self">[注]</a></sup></p>
-		<p>合理的自慰频率有助于身心健康。<sup id="cite_ref-自慰" class="reference"><a href="#cite_note-自慰" target="_self">[4]</a></sup>“合理”是指在自身可承受、认为对日常生活不会造成太大影响的频率，该频率因人而异<sup id="cite_ref-20世纪对自我性刺激的认识" class="reference"><a href="#cite_note-20世纪对自我性刺激的认识" target="_self">[10]</a></sup>。倘若超出了合理的频率，会造成一些身体不适和健康问题。 </p>
+		<p>合理的自慰频率有助于身心健康。<sup id="cite_ref-自慰" class="reference"><a href="#cite_note-自慰" target="_self" aria-label="佐证资料">[4]</a></sup>“合理”是指在自身可承受、认为对日常生活不会造成太大影响的频率，该频率因人而异<sup id="cite_ref-20世纪对自我性刺激的认识" class="reference"><a href="#cite_note-20世纪对自我性刺激的认识" target="_self" aria-label="佐证资料">[10]</a></sup>。倘若超出了合理的频率，会造成一些身体不适和健康问题。 </p>
 		<p>一般地，自慰依靠手即可完成。借助性玩具或其他物品等也可增加舒适度，但是使用不当会造成风险。 </p>
 		
 
@@ -235,8 +235,8 @@
 		<h3 class="mt-4 mb-3">女性自慰简述</h3>
 		
 		<p>女性的自慰一般以摩擦<strong>阴蒂</strong>、<strong>小阴唇</strong>附近进行，以及用手指插入<strong>阴道</strong>，进行对前壁的刺激。为避免受伤，建议在阴道充分湿润或使用合适的润滑剂后再插入阴道。初次进行插入阴道的行为时，<strong>处女膜</strong>可能会受损（亦有可能不会），出现暂时性的轻微出血和疼痛，属于正常情况。处女膜一般环绕在阴道口周围，中央开口因人而异大小、形状不一。您可参考《人类生殖系统》章节的相关信息。</p>
-		<p>阴蒂是女性最为敏感的部位，是女性性愉悦的主要器官。许多女性依靠对阴蒂的刺激达到高潮。<sup id="cite_ref-阴蒂" class="reference"><a href="#cite_note-阴蒂" target="_self">[5]</a></sup><sup id="cite_ref-阴蒂-维基百科" class="reference"><a href="#cite_note-阴蒂-维基百科" target="_self">[6]</a></sup></p>
-		<p>阴道口是高度可兴奋区域。有研究报告指出阴道前壁是性敏感区域，其距阴道口内部 5 ~ 8 厘米处，称之为 <strong>G 点（格雷芬贝格点）</strong>，受到刺激时会引起性快感。不过，学术界就 G 点与其他器官的关系、范围存在争议。<sup id="cite_ref-G点" class="reference"><a href="#cite_note-G点" target="_self">[7]</a></sup><sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[9]</a></sup></p>
+		<p>阴蒂是女性最为敏感的部位，是女性性愉悦的主要器官。许多女性依靠对阴蒂的刺激达到高潮。<sup id="cite_ref-阴蒂" class="reference"><a href="#cite_note-阴蒂" target="_self" aria-label="佐证资料">[5]</a></sup><sup id="cite_ref-阴蒂-维基百科" class="reference"><a href="#cite_note-阴蒂-维基百科" target="_self" aria-label="佐证资料">[6]</a></sup></p>
+		<p>阴道口是高度可兴奋区域。有研究报告指出阴道前壁是性敏感区域，其距阴道口内部 5 ~ 8 厘米处，称之为 <strong>G 点（格雷芬贝格点）</strong>，受到刺激时会引起性快感。不过，学术界就 G 点与其他器官的关系、范围存在争议。<sup id="cite_ref-G点" class="reference"><a href="#cite_note-G点" target="_self" aria-label="佐证资料">[7]</a></sup><sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[9]</a></sup></p>
 
 		<h3 class="mt-4 mb-3">男性自慰简述</h3>
 		<p>男性通常以握住<strong>阴茎</strong>上下移动摩擦的方式自慰。对于未进行过包皮手术的男性，可以利用包皮反复刺激<strong>龟头</strong>；而对于包皮无法覆盖龟头、在自慰过程中龟头裸露的男性，可以采取使用润滑液或使用唾液进行润滑后摩擦，避免引起龟头疼痛。</p>
@@ -329,7 +329,7 @@
 			<div class="col-md-7 text-md-end my-1">
 				<p class="key">Made in Zhengzhou with love.</p>
 
-				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
 						<rect width="48" height="48" fill="white" fill-opacity="0.01" />
 						<path d="M4 39H44V24V9H24H4V24V39Z" fill="none" stroke="#4e4e4e" stroke-width="4"
 							stroke-linejoin="round" />
@@ -346,8 +346,8 @@
 				</p>
 
 				<p>
-					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon">
-						<svg viewBox="0 0 24 24" aria-label="推特社交平台账号" style="width:26px;">
+					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon" aria-label="推特社交平台账号">
+						<svg viewBox="0 0 24 24" style="width:26px;">
 							<g>
 								<path
 									d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"
@@ -355,14 +355,14 @@
 							</g>
 						</svg>
 					</a>
-					<a href="https://github.com/knowsex" class="me-2 social-icon">
-						<svg viewBox="0 0 16 16" aria-label="代码托管GitHub账号" version="1.1" style="width:26px;">
+					<a href="https://github.com/knowsex" class="me-2 social-icon" aria-label="代码托管GitHub账号">
+						<svg viewBox="0 0 16 16" version="1.1" style="width:26px;">
 							<path fill="#4e4e4e" fill-rule="evenodd"
 								d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
 							</path>
 						</svg>
 					</a>
-					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur">
+					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur" aria-label="即刻App社交平台账号">
 						<!-- <img loading="lazy" src="/sub/jike.png" width="26" alt="即刻App社交平台账号"> -->
 						<svg data-name="图层 1" width="26" version="1.1" viewBox="0 0 1508 1508"
 							xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#"
@@ -392,7 +392,7 @@
 								d="m-264.89 821.91c-69.763-95.398-134.93-194.87-204.3-288.31-6.4103-10.646-8.8126-22.29 0.98-30.05 64.786-51.755 134.42-86.236 184.09-144.73 67.79-76.967 93.036-155.44 98.81-254.37-2.9988-237.81 2.4822-474.24-0.78-710.07-0.21-16.26 9.93-22.9 24.32-23.08 124.93 5.0241 252.32-6.7107 375.52-0.21 11.21 0.63 19.27 10.75 18.68 22.28-0.0943 229.49 2.6818 459.23 2.1 686.46-0.06 17.55-0.77 35.1-1.42 52.65-4.536 131.36-33.337 264.34-103.89 373.94-89.299 138.93-220.9 230.81-352.54 322.08-18.604 13.423-28.975 11.846-41.57-6.59z" />
 						</svg>
 					</a>
-					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon">
+					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon" aria-label="Mastodon社交账号">
 						<svg width="26" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 216.4144 232.00976">
 							<path
 								d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915"
