--- a/main/std/genital-wart/index.html
+++ b/main/std/genital-wart/index.html
@@ -183,15 +183,15 @@
 			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
 				<p><span class="darkmode-ignore">⭐</span>本文作者为<b>神奇的红毛丹</b>。</p>
-<p>尖锐湿疣是由<strong>人乳头状病毒</strong>（简称 <strong>HPV</strong> ）感染所引起的一种性传播疾病。<sup id="cite_ref-尖锐湿疣诊断" class="reference"><a href="#cite_note-尖锐湿疣诊断" target="_self">[1]</a></sup>感染后可长出性器疣。</p>
+<p>尖锐湿疣是由<strong>人乳头状病毒</strong>（简称 <strong>HPV</strong> ）感染所引起的一种性传播疾病。<sup id="cite_ref-尖锐湿疣诊断" class="reference"><a href="#cite_note-尖锐湿疣诊断" target="_self" aria-label="佐证资料">[1]</a></sup>感染后可长出性器疣。</p>
 <h2 class="mt-4 mb-4">传播</h2>
-<p>性接触为主要传播方式，男女皆可感染。也有无不洁性交史的人因间接接触发病。<sup id="cite_ref-非性接触" class="reference"><a href="#cite_note-非性接触" target="_self">[2]</a></sup>HPV 病毒也可由母亲传染给新生儿。注射 HPV 疫苗可有效防止感染。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self">[3]</a></sup><sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self">[4]</a></sup></p>
-<p>避孕套不能起到很充分的保护作用，因为避孕套无法遮住所有受感染的部位。更推荐的预防办法是减少与性行为经历不明者发生性行为、尽量避免自身的皮肤与受感染的组织直接接触。<sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self">[4]</a></sup></p>
+<p>性接触为主要传播方式，男女皆可感染。也有无不洁性交史的人因间接接触发病。<sup id="cite_ref-非性接触" class="reference"><a href="#cite_note-非性接触" target="_self" aria-label="佐证资料">[2]</a></sup>HPV 病毒也可由母亲传染给新生儿。注射 HPV 疫苗可有效防止感染。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self" aria-label="佐证资料">[3]</a></sup><sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self" aria-label="佐证资料">[4]</a></sup></p>
+<p>避孕套不能起到很充分的保护作用，因为避孕套无法遮住所有受感染的部位。更推荐的预防办法是减少与性行为经历不明者发生性行为、尽量避免自身的皮肤与受感染的组织直接接触。<sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 <h2 class="mt-4 mb-4">症状</h2>
-<p>受到生殖器 HPV 病毒株感染后，一般 2 周至 8 个月内即长出性器疣。疣的外观可能较小而平，也有可能较大成簇。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self">[5]</a></sup></p>
-<p>口交可能使口腔及喉咙生疣。肛交也可能使肛门和直肠内发生感染。<sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self">[4]</a></sup><sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self">[5]</a></sup></p>
-<p>男性患者最常见的病征，包括阴茎、阴囊或肛门长出一些痒或不痛的肉色小粒。女性患者白带可能增多，伴随外阴瘙痒或灼痛。在外阴、阴道、宫颈、尿道口及肛门周围生出菜花状或鸡冠样的赘生物。如疣生长在女性的子宫颈，则可能会引致轻微出血。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self">[3]</a></sup></p>
-<p>性器疣的患者一般不会引致严重的并发症。但宫颈癌与生殖器 HPV 病毒感染有密切联系。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self">[5]</a></sup></p>
+<p>受到生殖器 HPV 病毒株感染后，一般 2 周至 8 个月内即长出性器疣。疣的外观可能较小而平，也有可能较大成簇。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[5]</a></sup></p>
+<p>口交可能使口腔及喉咙生疣。肛交也可能使肛门和直肠内发生感染。<sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self" aria-label="佐证资料">[4]</a></sup><sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[5]</a></sup></p>
+<p>男性患者最常见的病征，包括阴茎、阴囊或肛门长出一些痒或不痛的肉色小粒。女性患者白带可能增多，伴随外阴瘙痒或灼痛。在外阴、阴道、宫颈、尿道口及肛门周围生出菜花状或鸡冠样的赘生物。如疣生长在女性的子宫颈，则可能会引致轻微出血。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self" aria-label="佐证资料">[3]</a></sup></p>
+<p>性器疣的患者一般不会引致严重的并发症。但宫颈癌与生殖器 HPV 病毒感染有密切联系。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[5]</a></sup></p>
 <div class="row show">
   <div class="col-md-6 img-box">
     <div class="click-to-show">
@@ -210,7 +210,7 @@
 </div>
 <h2 class="mt-4 mb-4">就诊</h2>
 <p>如感觉生殖器部位有出现肿块或疣，请及时前往医院。 </p>
-<p>尖锐湿疣常与无害的阴茎珍珠疹、假性湿疣混淆。醋酸白试验能够鉴别是否是尖锐湿疣。<sup id="cite_ref-尖锐湿疣诊断" class="reference"><a href="#cite_note-尖锐湿疣诊断" target="_self">[1]</a></sup></p>
+<p>尖锐湿疣常与无害的阴茎珍珠疹、假性湿疣混淆。醋酸白试验能够鉴别是否是尖锐湿疣。<sup id="cite_ref-尖锐湿疣诊断" class="reference"><a href="#cite_note-尖锐湿疣诊断" target="_self" aria-label="佐证资料">[1]</a></sup></p>
 <div class="row show">
     <div class="click-to-show">
       <p class="text-hover-img">可能含有令人不适的内容<br>点击或轻触去除模糊</p>
@@ -228,7 +228,7 @@
   </div>
 </div>
 <h2 class="mt-4 mb-4">预后</h2>
-<p>尖锐湿疣预后一般较好，大多数患者治疗后皮损可以改善或消退。部分情况下症状可能自行消退，但大多数病例不会自愈。治疗可能减少HPV感染，但无法根除感染。治疗后复发率较高，但最终易达到临床治愈。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self">[3]</a></sup></p>
+<p>尖锐湿疣预后一般较好，大多数患者治疗后皮损可以改善或消退。部分情况下症状可能自行消退，但大多数病例不会自愈。治疗可能减少HPV感染，但无法根除感染。治疗后复发率较高，但最终易达到临床治愈。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self" aria-label="佐证资料">[3]</a></sup></p>
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
@@ -315,7 +315,7 @@
 			<div class="col-md-7 text-md-end my-1">
 				<p class="key">Made in Zhengzhou with love.</p>
 
-				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
 						<rect width="48" height="48" fill="white" fill-opacity="0.01" />
 						<path d="M4 39H44V24V9H24H4V24V39Z" fill="none" stroke="#4e4e4e" stroke-width="4"
 							stroke-linejoin="round" />
@@ -332,8 +332,8 @@
 				</p>
 
 				<p>
-					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon">
-						<svg viewBox="0 0 24 24" aria-label="推特社交平台账号" style="width:26px;">
+					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon" aria-label="推特社交平台账号">
+						<svg viewBox="0 0 24 24" style="width:26px;">
 							<g>
 								<path
 									d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"
@@ -341,14 +341,14 @@
 							</g>
 						</svg>
 					</a>
-					<a href="https://github.com/knowsex" class="me-2 social-icon">
-						<svg viewBox="0 0 16 16" aria-label="代码托管GitHub账号" version="1.1" style="width:26px;">
+					<a href="https://github.com/knowsex" class="me-2 social-icon" aria-label="代码托管GitHub账号">
+						<svg viewBox="0 0 16 16" version="1.1" style="width:26px;">
 							<path fill="#4e4e4e" fill-rule="evenodd"
 								d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
 							</path>
 						</svg>
 					</a>
-					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur">
+					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur" aria-label="即刻App社交平台账号">
 						<!-- <img loading="lazy" src="/sub/jike.png" width="26" alt="即刻App社交平台账号"> -->
 						<svg data-name="图层 1" width="26" version="1.1" viewBox="0 0 1508 1508"
 							xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#"
@@ -378,7 +378,7 @@
 								d="m-264.89 821.91c-69.763-95.398-134.93-194.87-204.3-288.31-6.4103-10.646-8.8126-22.29 0.98-30.05 64.786-51.755 134.42-86.236 184.09-144.73 67.79-76.967 93.036-155.44 98.81-254.37-2.9988-237.81 2.4822-474.24-0.78-710.07-0.21-16.26 9.93-22.9 24.32-23.08 124.93 5.0241 252.32-6.7107 375.52-0.21 11.21 0.63 19.27 10.75 18.68 22.28-0.0943 229.49 2.6818 459.23 2.1 686.46-0.06 17.55-0.77 35.1-1.42 52.65-4.536 131.36-33.337 264.34-103.89 373.94-89.299 138.93-220.9 230.81-352.54 322.08-18.604 13.423-28.975 11.846-41.57-6.59z" />
 						</svg>
 					</a>
-					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon">
+					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon" aria-label="Mastodon社交账号">
 						<svg width="26" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 216.4144 232.00976">
 							<path
 								d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915"
