--- a/main/std/gonorrhea/index.html
+++ b/main/std/gonorrhea/index.html
@@ -183,14 +183,14 @@
 			</div>
 			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
-				<p>淋病是由淋球菌引起的传染病。其主要导致泌尿生殖系统的化脓性感染，有时也引发眼、咽、直肠等部位出现症状。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup><sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self">[3]</a></sup></p>
+				<p>淋病是由淋球菌引起的传染病。其主要导致泌尿生殖系统的化脓性感染，有时也引发眼、咽、直肠等部位出现症状。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self" aria-label="佐证资料">[3]</a></sup></p>
 <h2>传播</h2>
-<p>与受感染的生殖器、咽喉或直肠黏膜紧密接触就有可能感染。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup>少数情况下，接触含淋球菌的分泌物或是被污染的用具（如毛巾、座便器）也会导致感染。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup><sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self">[3]</a></sup></p>
-<p>淋球菌离开人体后不易存活，其只传染人体。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup>在高温或干燥条件下，淋球菌会较快死亡。不过，在不完全干燥或在脓液之环境中，淋球菌可能会保持 10 余小时甚至数天的传染性。<sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self">[3]</a></sup></p>
+<p>与受感染的生殖器、咽喉或直肠黏膜紧密接触就有可能感染。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup>少数情况下，接触含淋球菌的分泌物或是被污染的用具（如毛巾、座便器）也会导致感染。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup><sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self" aria-label="佐证资料">[3]</a></sup></p>
+<p>淋球菌离开人体后不易存活，其只传染人体。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup>在高温或干燥条件下，淋球菌会较快死亡。不过，在不完全干燥或在脓液之环境中，淋球菌可能会保持 10 余小时甚至数天的传染性。<sup id="cite_ref-皮肤性病学" class="reference"><a href="#cite_note-皮肤性病学" target="_self" aria-label="佐证资料">[3]</a></sup></p>
 <h2>症状</h2>
 <p>5% ~ 20% 的男性患者和 50% ~ 80% 的女性患者症状轻微，但仍具有传染性。</p>
-<p>男性的主要症状表现在尿道有淡黄脓状分泌物，小便时可伴有烧灼感和瘙痒。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup>不治疗的情况下，在 2 ~ 3 周内症状会消退。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup>但此时仍有传染性，并可引发其它炎症。少数情况下将影响到肾脏，也会传染到关节处。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup></p>
-<p>女性的症状大部分在早期轻微或无症状，这使得女性更多地会出现并发症。感染最初通常在宫颈，阴道有淡黄色排泄物，但通常不容易被注意。不予以治疗，则可能引起盆腔炎。盆腔炎的症状也较少，可能有下腹部子宫和骨盆区域疼痛、敏感、打寒颤、发烧、小便灼热等症状。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self">[2]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
+<p>男性的主要症状表现在尿道有淡黄脓状分泌物，小便时可伴有烧灼感和瘙痒。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup>不治疗的情况下，在 2 ~ 3 周内症状会消退。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup>但此时仍有传染性，并可引发其它炎症。少数情况下将影响到肾脏，也会传染到关节处。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup></p>
+<p>女性的症状大部分在早期轻微或无症状，这使得女性更多地会出现并发症。感染最初通常在宫颈，阴道有淡黄色排泄物，但通常不容易被注意。不予以治疗，则可能引起盆腔炎。盆腔炎的症状也较少，可能有下腹部子宫和骨盆区域疼痛、敏感、打寒颤、发烧、小便灼热等症状。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 
   <div class="row show">
     <div class="col-md-6 img-box">
@@ -209,10 +209,10 @@
     </div>
   </div>
 
-<p>口交和接吻可引发咽淋病，主要症状是嗓子疼痛，也有发烧或淋巴肿大。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup>有时患者无症状，但仍有传染性。</p>
-<p>直肠淋病一般是通过肛交引发的直肠感染。也有由阴道排泄物进入直肠引发的感染。其症状包括肛门瘙痒，伴有直肠排泄物等。有时患者无症状，但仍有传染性。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self">[1]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
+<p>口交和接吻可引发咽淋病，主要症状是嗓子疼痛，也有发烧或淋巴肿大。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup>有时患者无症状，但仍有传染性。</p>
+<p>直肠淋病一般是通过肛交引发的直肠感染。也有由阴道排泄物进入直肠引发的感染。其症状包括肛门瘙痒，伴有直肠排泄物等。有时患者无症状，但仍有传染性。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 <h2>预后</h2>
-<p>正确的治疗可治愈淋病。但疾病带来的一些永久性损害可能无法被阻止感染的药物清除。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self">[4]</a></sup></p>
+<p>正确的治疗可治愈淋病。但疾病带来的一些永久性损害可能无法被阻止感染的药物清除。<sup id="cite_ref-CDC" class="reference"><a href="#cite_note-CDC" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
@@ -281,7 +281,7 @@
 			<div class="col-md-7 text-md-end my-1">
 				<p class="key">Made in Zhengzhou with love.</p>
 
-				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<p>					<svg width="26" height="26" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
 						<rect width="48" height="48" fill="white" fill-opacity="0.01" />
 						<path d="M4 39H44V24V9H24H4V24V39Z" fill="none" stroke="#4e4e4e" stroke-width="4"
 							stroke-linejoin="round" />
@@ -298,8 +298,8 @@
 				</p>
 
 				<p>
-					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon">
-						<svg viewBox="0 0 24 24" aria-label="推特社交平台账号" style="width:26px;">
+					<a href="https://twitter.com/KnowSex_net" class="me-2 social-icon" aria-label="推特社交平台账号">
+						<svg viewBox="0 0 24 24" style="width:26px;">
 							<g>
 								<path
 									d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"
@@ -307,14 +307,14 @@
 							</g>
 						</svg>
 					</a>
-					<a href="https://github.com/knowsex" class="me-2 social-icon">
-						<svg viewBox="0 0 16 16" aria-label="代码托管GitHub账号" version="1.1" style="width:26px;">
+					<a href="https://github.com/knowsex" class="me-2 social-icon" aria-label="代码托管GitHub账号">
+						<svg viewBox="0 0 16 16" version="1.1" style="width:26px;">
 							<path fill="#4e4e4e" fill-rule="evenodd"
 								d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
 							</path>
 						</svg>
 					</a>
-					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur">
+					<a class="me-2 social-icon" href="https://okjk.co/IJ8Ur" aria-label="即刻App社交平台账号">
 						<!-- <img loading="lazy" src="/sub/jike.png" width="26" alt="即刻App社交平台账号"> -->
 						<svg data-name="图层 1" width="26" version="1.1" viewBox="0 0 1508 1508"
 							xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#"
@@ -344,7 +344,7 @@
 								d="m-264.89 821.91c-69.763-95.398-134.93-194.87-204.3-288.31-6.4103-10.646-8.8126-22.29 0.98-30.05 64.786-51.755 134.42-86.236 184.09-144.73 67.79-76.967 93.036-155.44 98.81-254.37-2.9988-237.81 2.4822-474.24-0.78-710.07-0.21-16.26 9.93-22.9 24.32-23.08 124.93 5.0241 252.32-6.7107 375.52-0.21 11.21 0.63 19.27 10.75 18.68 22.28-0.0943 229.49 2.6818 459.23 2.1 686.46-0.06 17.55-0.77 35.1-1.42 52.65-4.536 131.36-33.337 264.34-103.89 373.94-89.299 138.93-220.9 230.81-352.54 322.08-18.604 13.423-28.975 11.846-41.57-6.59z" />
 						</svg>
 					</a>
-					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon">
+					<a rel="me" href="https://o3o.ca/@knowsex" class="social-icon" aria-label="Mastodon社交账号">
 						<svg width="26" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 216.4144 232.00976">
 							<path
 								d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915"
